# ncei-cpp

./: .clang-format  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release.yml
cmake/: nceiConfig.cmake.in
examples/: CMakeLists.txt  basic_cdo_usage.cpp  data_service_search.cpp  format_comparison.cpp  historical_temperature.cpp  multi_year_data.cpp
include/ncei/: cache.hpp  cdo_client.hpp  csv_parser.hpp  data_service_client.hpp  date_range.hpp  error.hpp  format.hpp  http_client.hpp  monitoring_client.hpp  ncei.hpp  pagination.hpp  rate_limit.hpp  retry.hpp
include/ncei/models/: climate_index.hpp  common.hpp
include/ncei/models/cdo/: data.hpp  data_category.hpp  data_type.hpp  dataset.hpp  location.hpp  location_category.hpp  station.hpp
include/ncei/models/data_service/: data_point.hpp  dataset_metadata.hpp  search_result.hpp
src/: CMakeLists.txt
src/api/: cdo_client.cpp  data_service_client.cpp  monitoring_client.cpp
src/core/: csv_parser.cpp  date_range.cpp  error.cpp  pagination.cpp  rate_limit.cpp  retry.cpp
src/http/: client.cpp
src/models/: climate_index.cpp  common.cpp  common_glaze_detail.hpp  pagination_detail.hpp
src/models/cdo/: data.cpp  data_category.cpp  data_type.cpp  dataset.cpp  location.cpp  location_category.cpp  station.cpp
src/models/data_service/: data_point.cpp  dataset_metadata.cpp  search_result.cpp
tests/: CMakeLists.txt  glaze_test.cpp  parse_benchmark.cpp  test_cache.cpp  test_cdo_client.cpp  test_cdo_models.cpp  test_climate_index.cpp  test_csv_parser.cpp  test_data_service_client.cpp  test_data_service_models.cpp  test_date_range.cpp  test_error.cpp  test_format.cpp  test_pagination.cpp  test_rate_limit.cpp  test_retry.cpp
tools/: bench.sh
